feat(evaclub-map):add function to create box within a zone
