# evaclub-ui/src/app/services/models.ts
@@ -1,11 +1,11 @@
 /* tslint:disable */
 /* eslint-disable */
 export type { BoxRequest } from './models/box-request';
-export type { BoxResponse } from './models/box-response';
-export type { EventRequest } from './models/event-request';
-export type { EventResponse } from './models/event-response';
-export type { PageResponseBoxResponse } from './models/page-response-box-response';
-export type { PageResponseEventResponse } from './models/page-response-event-response';
-export type { PageResponseZoneResponse } from './models/page-response-zone-response';
-export type { ZoneRequest } from './models/zone-request';
-export type { ZoneResponse } from './models/zone-response';
+export type{ BoxResponse } from './models/box-response';
+export type{ EventRequest } from './models/event-request';
+export type{ EventResponse } from './models/event-response';
+export type{ PageResponseBoxResponse } from './models/page-response-box-response';
+export type{ PageResponseEventResponse } from './models/page-response-event-response';
+export type{ PageResponseZoneResponse } from './models/page-response-zone-response';
+export type{ ZoneRequest } from './models/zone-request';
+export type{ ZoneResponse } from './models/zone-response';
