# evaclub-ui/src/app/services/models/event-response.ts
@@ -1,6 +1,7 @@
 /* tslint:disable */
 /* eslint-disable */
 export interface EventResponse {
+  defaultLayout?: boolean;
   enabled?: boolean;
   eventCover?: string;
   eventDate?: string;
